--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,17 +5,29 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts",
+    "lint": "tslint --project tsconfig.json"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/inversify": "^2.0.33",
+    "@types/js-sha512": "^0.7.0",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.0",
+    "@types/superagent": "^4.1.3",
+    "chai": "^4.2.0",
     "inversify": "^4.13.0",
+    "js-sha512": "^0.8.0",
     "mocha": "^5.2.0",
+    "mocha-sinon": "^2.1.0",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.5"
+    "sinon": "^7.3.2",
+    "superagent": "^5.1.0",
+    "ts-node": "^8.1.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
   }
 }
