--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -14,11 +14,15 @@
     "@types/node": "^12.0.0",
     "@types/mocha": "^5.2.7",
     "@types/node-fetch": "^2.5.0",
+    "@types/chai": "^4.1.3",
+    "@types/chai-as-promised": "^7.1.0",
     "inversify": "^4.13.0",
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
