--- a/challenges/web-frontend/caronsale/package.json
+++ b/challenges/web-frontend/caronsale/package.json
@@ -24,6 +24,7 @@
     "@types/js-sha512": "^0.7.0",
     "core-js": "^2.5.4",
     "js-sha512": "^0.8.0",
+    "moment": "^2.24.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
