--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@types/inversify": "^2.0.33",
     "@types/node": "^12.0.0",
+    "axios": "^0.19.0",
     "inversify": "^4.13.0",
+    "js-sha512": "^0.8.0",
     "mocha": "^5.2.0",
+    "qs": "^6.7.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
