--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --require ts-node/register ./src/**/*.spec.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +15,16 @@
     "axios": "^0.19.0",
     "inversify": "^4.13.0",
     "js-sha512": "^0.8.0",
-    "mocha": "^5.2.0",
     "qs": "^6.7.0",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "nock": "^10.0.6",
+    "ts-node": "^8.3.0"
   }
 }
