--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,17 +5,32 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts"
+    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts",
+    "postinstall": "node-config-ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/inversify": "^2.0.33",
-    "@types/node": "^12.0.0",
+    "axios": "0.19.0",
+    "https": "1.0.0",
     "inversify": "^4.13.0",
-    "mocha": "^5.2.0",
+    "nock": "^10.0.6",
+    "node-config-ts": "^2.2.4",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "chai": "^4.2.0",
+    "sinon": "^7.4.1",
+    "sinon-chai": "^3.3.0",
+    "chai-http": "^4.3.0",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7",
+    "@types/sinon-chai": "^3.2.2",
+    "@types/axios": "0.9.28",
+    "@types/inversify": "^2.0.33",
+    "@types/node": "^12.0.0"
   }
 }
