--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -21,17 +21,18 @@
     "typescript": "^3.4.5"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "chai": "^4.2.0",
-    "sinon": "^7.4.1",
-    "sinon-chai": "^3.3.0",
-    "chai-http": "^4.3.0",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.7",
-    "@types/sinon-chai": "^3.2.2",
     "@types/axios": "0.9.28",
+    "@types/chai": "^4.1.7",
     "@types/inversify": "^2.0.33",
+    "@types/mocha": "^5.2.7",
+    "@types/nock": "^10.0.3",
     "@types/node": "^12.0.0",
-    "@types/nock": "^10.0.3"
+    "@types/sinon-chai": "^3.2.2",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^5.2.0",
+    "nyc": "^14.1.1",
+    "sinon": "^7.4.1",
+    "sinon-chai": "^3.3.0"
   }
 }
