--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -17,5 +17,13 @@
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.2.0",
+    "@types/mocha": "^5.2.7",
+    "@types/request-promise": "^4.1.44",
+    "chai": "^4.2.0",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
