--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -20,9 +20,11 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
+    "@types/chai-arrays": "^1.0.3",
     "@types/mocha": "^5.2.7",
     "@types/request-promise": "^4.1.44",
     "chai": "^4.2.0",
+    "chai-arrays": "^2.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
