--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/ts-node src/app/main.ts",
-    "test": "./node_modules/.bin/mocha --compilers ts:ts-node/register ./src/**/*.spec.ts",
+    "test": "./node_modules/.bin/mocha --require ts-node/register ./src/**/*.spec.ts",
     "postinstall": "node-config-ts"
   },
   "author": "",
