--- a/challenges/backend/package.json
+++ b/challenges/backend/package.json
@@ -10,9 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.2.5",
     "@types/inversify": "^2.0.33",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^12.0.0",
+    "axios": "^0.19.0",
+    "chai": "^4.2.0",
     "inversify": "^4.13.0",
+    "js-sha512": "^0.8.0",
     "mocha": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
